--- a/index.html
+++ b/index.html
@@ -42,8 +42,6 @@
             <button type="submit">Cadastrar</button>
         </form>
     </div>
-    <script src="script.js"></script> <!-- Arquivo JS externo -->
-    <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/xlsx/0.18.5/xlsx.full.min.js"></script>
+    <script src="cadastro.js"></script> <!-- Arquivo JavaScript externo -->
 </body>
 </html>
