--- a/index.html
+++ b/index.html
@@ -42,6 +42,6 @@
             <button type="submit">Cadastrar</button>
         </form>
     </div>
-    <script src="cadastro.js"></script> <!-- Arquivo JavaScript externo -->
+    <script src="script.js"></script> <!-- Arquivo JavaScript externo -->
 </body>
 </html>
