Atualização: inclusão da taxa de entrega e melhorias no carrinho

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                 <option value="Fortaleza">Fortaleza</option>
                 <option value="Eusébio">Eusébio</option>
                 <option value="Aquiraz">Aquiraz</option>
-                <option value="Pindorama">Pindorama</option>
+                <option value="Pindorama">Pindoretama</option>
                 <option value="Cascavel">Cascavel</option>
                 <option value="Beberibe">Beberibe</option>
             </select>
